<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElderAlert</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="alert">ALERT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="tab_p_info">Personal</string>
    <string name="tab_login_info">Login</string>
    <string name="tab_experience">Experience</string>
    <string name="submit_button">Submit</string>
	<string name="profile">View Profile</string>
	<string name="save_profile">Save Profile</string>
	<string name="Settings">menu_settings</string>

</resources>